[metadata]
name = mema
version = 0.0.1
description = memory augmented transformer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominiquegarmier/mema
author = Dominique F. Garmier
auther_email = dominique@garmier.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = mema
python_requires = >=3.10
install_requires =
    einops
    numpy
    torch

[flake8]
max-line-length = 127
ignore = F722
